# HW1-MECH_ENG-433

./: .gitignore
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: FDCAN_Com_Polling.language.settings.xml  HW11.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 3.snap  4.snap  9.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree  4.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
FDCAN_Com_Polling/: .cproject  .mxproject  .project  FDCAN_Com_Polling Debug.launch  FDCAN_Com_Polling.ioc
FDCAN_Com_Polling/.metadata/: .log4j2.xml  version.ini
FDCAN_Com_Polling/.metadata/.plugins/org.eclipse.cdt.core/: STM32CubeIDE.1778714124188.pdom
FDCAN_Com_Polling/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
FDCAN_Com_Polling/Debug/: FDCAN_Com_Polling 2.list  FDCAN_Com_Polling 2.map  FDCAN_Com_Polling.elf  FDCAN_Com_Polling.list  FDCAN_Com_Polling.map  objects.list  sources.mk
FDCAN_Com_Polling/Debug/Src/: main 2.cyclo  main 2.su  main.cyclo  main.d  main.su  stm32c0xx_hal_msp.cyclo  stm32c0xx_hal_msp.d  stm32c0xx_hal_msp.su  stm32c0xx_it.cyclo  stm32c0xx_it.d  stm32c0xx_it.su  subdir.mk  system_stm32c0xx.d
FDCAN_Com_Polling/Debug/Startup/: startup_stm32c092rctx.d  subdir.mk
FDCAN_Com_Polling/STM32CubeIDE/Debug/: objects.list
FDCAN_Com_Polling/Src/: main.c
HW10/: game.py  main.py  pico_setup.py
HW10_sensor/: CMakeLists.txt  HW10_sensor.c
HW11/: .cproject  .mxproject  .project  HW11 Debug.launch  HW11.ioc
HW11/.metadata/: .log4j2.xml  version.ini
HW11/Core/Src/: main.c
HW11/Debug/: HW11 2.elf  HW11 2.list  HW11 2.map  HW11 3.elf  HW11 3.list  HW11 3.map  HW11 4.elf  HW11 4.list  HW11 4.map  HW11.elf  HW11.list  HW11.map
HW11/Debug/Core/Src/: main 2.cyclo  main 2.su  main.cyclo  (+2 more)
HW11_pico/: CMakeLists.txt  HW11_pico.c
HW14/: CMakeLists.txt  HW14.c  HW14.py  hx711_0.c  hx711_0.h
HW2/: CMakeLists.txt  HW2.c  HW2.code-workspace  code.py  main.c  pico_sdk_import.cmake
HW2/HW2/: device.cfg
HW2/HW2/main/: code.py
HW2/vscode/: settings.json
HW3/: CMakeLists.txt  HW3.c  blinktest.c
HW4/: CMakeLists.txt  HW4.c  font.c  font.h
HW5/: CMakeLists.txt  HW5.c
HW6/: CMakeLists.txt  HW6.c
HW7/: CMakeLists.txt  HW7.c
HW8/: CMakeLists.txt  HW8.c
HW9/: fir.py  low_pass.py  low_pass_iir.py  python_csv.py
dev_hid_composite/: CMakeLists.txt  imu.c  imu.h  main.c  usb_descriptors.h
me433_hw13/: #auto_saved_files#  _autosave-me433_hw13.kicad_pcb  _autosave-me433_hw13.kicad_sch  me433_hw13.kicad_pcb  me433_hw13.kicad_prl  me433_hw13.kicad_pro  me433_hw13.kicad_sch  me433_hw13_bom.csv  ~_autosave-me433_hw13.kicad_pcb.lck  ~me433_hw13.kicad_sch.lck
me433_hw13/me433_hw18/: #auto_saved_files#  _autosave-me433_hw18.kicad_sch  me433_hw18.kicad_prl  me433_hw18.kicad_pro  me433_hw18.kicad_sch
me433_hw18/: me433_hw18.kicad_sch  plot.py
(+92 files in other folders)
